--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mehandi Designs</string>
+    <string name="app_name">Easy Mehandi Designs</string>
     <!--real ad ids-->
     <!--<string name="admob_app_id">ca-app-pub-8567160823440243~6793330292</string>-->
     <!--<string name="admob_banner_id">ca-app-pub-8567160823440243/3873978323</string>-->
@@ -16,4 +16,11 @@
     <string name="button_confirm">Confirm</string>
     <string name="button_ok">OK</string>
     <string name="company"><b>A P P   I N S P I R E</b></string>
+
+    <string name="disclaimer"><p>We do not own the content provided in this app, it is available online for free</p><p>
+        This app is just organized way to see the particular content.
+    </p><p>
+        We do not claim copyrights of any content provided in this app, all content is the copyright of their respective owners.
+    </p></string>
+    <string name="about_us">About us ddnkasndkaj dasjdaskd djlasd jdsak asdjasjd asdjj</string>
 </resources>
