--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
-    <string name="app_name">Fancy Mehandi Designs</string>
+    <string name="app_name">Arabic Mehandi Designs</string>
     <!--real ad ids-->
-    <string name="admob_app_id">ca-app-pub-3829777018725711~7624047269</string>
-    <string name="admob_banner_id">ca-app-pub-3829777018725711/1016653143</string>
-    <string name="admob_interstitial">ca-app-pub-3829777018725711/7007346423</string>
+    <string name="admob_app_id">ca-app-pub-3829777018725711~8071840022</string>
+    <string name="admob_banner_id">ca-app-pub-3829777018725711/8292521244</string>
+    <string name="admob_interstitial">ca-app-pub-3829777018725711/7334662797</string>
     <!--test ad ids-->
     <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
     <!--<string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
     <!--<string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
 
 
-    <string name="splash_text">Simple Mehandi Designs</string>
+    <string name="splash_text">Arabic Mehandi Designs</string>
     <string name="msg_exit">Are you sure you want to exit?</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_confirm">Confirm</string>
