--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fancy Mehandi Designs</string>
+    <string name="app_name">Finger Mehandi Designs</string>
     <!--real ad ids-->
     <string name="admob_app_id">ca-app-pub-3829777018725711~7624047269</string>
     <string name="admob_banner_id">ca-app-pub-3829777018725711/1016653143</string>
