--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Indian Mehandi Designs</string>
+    <string name="app_name">Easy Mehandi Designs</string>
     <!--real ad ids-->
     <string name="admob_app_id">ca-app-pub-3829777018725711~7624047269</string>
     <string name="admob_banner_id">ca-app-pub-3829777018725711/1016653143</string>
@@ -10,7 +10,7 @@
     <!--<string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->
 
 
-    <string name="splash_text">Indian Mehandi Designs</string>
+    <string name="splash_text">Easy Mehandi Designs</string>
     <string name="msg_exit">Are you sure you want to exit?</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_confirm">Confirm</string>
