--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Necklace Designs</string>
-    <string name="splash_text">Necklace Designs</string>
+    <string name="app_name">Bracelet Designs</string>
+    <string name="splash_text">Bracelet Designs</string>
     <string name="msg_exit">Are you sure you want to exit?</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_confirm">Confirm</string>
